--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.2",
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "markdown-it": "^12.1.0",
@@ -23,6 +23,8 @@
     "react-flatpickr": "^3.10.7",
     "react-image-lightbox": "^5.1.1",
     "react-intl": "^5.20.2",
+    "react-lazyload": "^3.2.0",
+    "react-loading-overlay": "^1.0.1",
     "react-markdown-editor-lite": "^1.3.0",
     "react-number-format": "^4.6.4",
     "react-redux": "^7.2.4",
