--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-scroll-up": "^1.4.0",
     "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-toastify": "^5.5.0",
@@ -42,6 +43,7 @@
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.9",
     "typescript": "^4.3.2"
   },
   "scripts": {
